# prost-cross-package-import

./: Cargo.toml  README.md  build.rs
proto/main/v1/: main.proto
proto/other/v1/: other.proto
proto/third/v1/: third.proto
src/: lib.rs
