[package]
name = "prost-cross-package-import"
version = "0.1.0"
authors = ["Greg Orzell <gorzell@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
prost = "0.7"

[build-dependencies]
prost-build = "0.7"
